// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launchpad: index mapStateToProps with default state 1`] = `
Object {
  "accounts": undefined,
  "currentUser": Object {
    "accountAddress": "86ee0c9644611495c0a1b1074e40d4e6db2f6b26",
    "id": 6,
    "username": "tanuj41",
  },
  "initialValues": Object {
    "appUserAddress": "86ee0c9644611495c0a1b1074e40d4e6db2f6b26",
    "appUsername": "tanuj41",
  },
  "isOpen": false,
  "launchPad": Object {
    "appPackage": null,
    "error": "",
    "firstLoad": true,
    "requestCompleted": false,
    "username": "",
  },
}
`;

exports[`Launchpad: index render component with initial (enterprise mode) 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row smd-pad-12\\">
    <div className=\\"col-sm-10\\">
      <h3>
        Launchpad
      </h3>
    </div>
    <div className=\\"col-sm-2 text-right smd-pad-vertical-12\\">
      <Link to=\\"/apps\\" replace={false}>
        <button type=\\"button\\" className=\\"pt-button pt-intent-primary\\">
          <i className=\\"fa fa-rocket smd-margin-right-8\\">
             
          </i>
          Apps
        </button>
      </Link>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"pt-card\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-6\\">
            <h4>
              Enter application details
            </h4>
          </div>
          <div className=\\"col-sm-6 text-right\\">
            <Blueprint.Button onClick={[undefined]} className=\\"pt-button pt-minimal\\">
              <i className=\\"fa fa-info-circle smd-margin-right-8\\">
                 
              </i>
              Instructions
            </Blueprint.Button>
            <a href=\\"https://developers.blockapps.net/advanced/launch-dapp/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
              <button className=\\"pt-button pt-minimal pt-intent-primary\\">
                <i className=\\"fa fa-book smd-margin-right-8\\">
                   
                </i>
                Read the docs
              </button>
            </a>
          </div>
        </div>
        <hr />
        <form>
          <div className=\\"row smd-pad-top-12\\">
            <div className=\\"col-sm-2 text-right\\">
              <label className=\\"pt-label smd-pad-vertical-4\\" htmlFor=\\"appName\\">
                Username
              </label>
            </div>
            <div className=\\"col-sm-10\\">
              <div className=\\"pt-select\\">
                <Field className=\\"pt-input\\" component=\\"select\\" name=\\"appUsername\\" onChange={[Function]} validate={[Function: required]} disabled={false} required={true}>
                  <option value={{...}} />
                </Field>
              </div>
            </div>
          </div>
          <div className=\\"row\\">
            <div className=\\"col-sm-2 text-right\\">
              <label className=\\"pt-label smd-pad-vertical-4\\" htmlFor=\\"appName\\">
                User Address
              </label>
            </div>
            <div className=\\"col-sm-10\\">
              <div className=\\"pt-select\\">
                <Field className=\\"pt-input\\" component=\\"select\\" name=\\"appUserAddress\\" validate={[Function: required]} required={true} disabled={false}>
                  <option value={{...}} />
                </Field>
              </div>
            </div>
          </div>
          <div className=\\"row\\">
            <div className=\\"col-sm-2 text-right\\">
              <label className=\\"pt-label smd-pad-vertical-4\\" htmlFor=\\"appName\\">
                Password
              </label>
            </div>
            <div className=\\"col-sm-10\\">
              <Field name=\\"appPassword\\" className=\\"pt-input smd-input-width\\" component=\\"input\\" type=\\"password\\" placeholder=\\"User Password\\" dir=\\"auto\\" required={true} />
            </div>
          </div>
          <div className=\\"row\\">
            <div className=\\"col-sm-2 text-right\\">
              <label className=\\"pt-label smd-pad-vertical-4\\" htmlFor=\\"appName\\">
                Package
              </label>
            </div>
            <div className=\\"col-sm-10\\">
              <Field className=\\"pt-input\\" name=\\"appPackage\\" component={[Function]} dir=\\"auto\\" title=\\"Package\\" required={true} />
            </div>
          </div>
          <div className=\\"row\\">
            <div className=\\"col-sm-offset-2 col-sm-1\\">
              <button type=\\"submit\\" onClick={[Function]} className=\\"pt-button pt-intent-primary\\" disabled={true}>
                Upload
              </button>
            </div>
            <div className=\\"col-sm-9\\">
              <div className=\\"smd-pad-4 smd-text-warning\\" />
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
  <Blueprint.Dialog isOpen={false} onClose={[undefined]} title=\\"Additional Instructions\\" className=\\"pt-dark cli-dialog\\" canOutsideClickClose={true}>
    <withRouter(Connect(CLI)) />
  </Blueprint.Dialog>
</div>"
`;

exports[`Launchpad: index render component with initial (public mode) 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row smd-pad-12\\">
    <div className=\\"col-sm-10\\">
      <h3>
        Launchpad
      </h3>
    </div>
    <div className=\\"col-sm-2 text-right smd-pad-vertical-12\\">
      <Link to=\\"/apps\\" replace={false}>
        <button type=\\"button\\" className=\\"pt-button pt-intent-primary\\">
          <i className=\\"fa fa-rocket smd-margin-right-8\\">
             
          </i>
          Apps
        </button>
      </Link>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"pt-card\\">
        <div className=\\"row\\">
          <div className=\\"col-sm-6\\">
            <h4>
              Enter application details
            </h4>
          </div>
          <div className=\\"col-sm-6 text-right\\">
            <Blueprint.Button onClick={[undefined]} className=\\"pt-button pt-minimal\\">
              <i className=\\"fa fa-info-circle smd-margin-right-8\\">
                 
              </i>
              Instructions
            </Blueprint.Button>
            <a href=\\"https://developers.blockapps.net/advanced/launch-dapp/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">
              <button className=\\"pt-button pt-minimal pt-intent-primary\\">
                <i className=\\"fa fa-book smd-margin-right-8\\">
                   
                </i>
                Read the docs
              </button>
            </a>
          </div>
        </div>
        <hr />
        <form>
          <div className=\\"row smd-pad-top-12\\">
            <div className=\\"col-sm-2 text-right\\">
              <label className=\\"pt-label smd-pad-vertical-4\\" htmlFor=\\"appName\\">
                Username
              </label>
            </div>
            <div className=\\"col-sm-10\\">
              <div className=\\"\\">
                <Field className=\\"pt-input\\" component=\\"select\\" name=\\"appUsername\\" onChange={[Function]} validate={[Function: required]} disabled={true} required={true}>
                  <option value={[undefined]} />
                </Field>
              </div>
            </div>
          </div>
          <div className=\\"row\\">
            <div className=\\"col-sm-2 text-right\\">
              <label className=\\"pt-label smd-pad-vertical-4\\" htmlFor=\\"appName\\">
                User Address
              </label>
            </div>
            <div className=\\"col-sm-10\\">
              <div className=\\"\\">
                <Field className=\\"pt-input\\" component=\\"select\\" name=\\"appUserAddress\\" validate={[Function: required]} required={true} disabled={true}>
                  <option value=\\"86ee0c9644611495c0a1b1074e40d4e6db2f6b26\\">
                    86ee0c9644611495c0a1b1074e40d4e6db2f6b26
                  </option>
                </Field>
              </div>
            </div>
          </div>
          <div className=\\"row\\">
            <div className=\\"col-sm-2 text-right\\">
              <label className=\\"pt-label smd-pad-vertical-4\\" htmlFor=\\"appName\\">
                Password
              </label>
            </div>
            <div className=\\"col-sm-10\\">
              <Field name=\\"appPassword\\" className=\\"pt-input smd-input-width\\" component=\\"input\\" type=\\"password\\" placeholder=\\"User Password\\" dir=\\"auto\\" required={true} />
            </div>
          </div>
          <div className=\\"row\\">
            <div className=\\"col-sm-2 text-right\\">
              <label className=\\"pt-label smd-pad-vertical-4\\" htmlFor=\\"appName\\">
                Package
              </label>
            </div>
            <div className=\\"col-sm-10\\">
              <Field className=\\"pt-input\\" name=\\"appPackage\\" component={[Function]} dir=\\"auto\\" title=\\"Package\\" required={true} />
            </div>
          </div>
          <div className=\\"row\\">
            <div className=\\"col-sm-offset-2 col-sm-1\\">
              <button type=\\"submit\\" onClick={[Function]} className=\\"pt-button pt-intent-primary\\" disabled={true}>
                Upload
              </button>
            </div>
            <div className=\\"col-sm-9\\">
              <div className=\\"smd-pad-4 smd-text-warning\\" />
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
  <Blueprint.Dialog isOpen={false} onClose={[undefined]} title=\\"Additional Instructions\\" className=\\"pt-dark cli-dialog\\" canOutsideClickClose={true}>
    <withRouter(Connect(CLI)) />
  </Blueprint.Dialog>
</div>"
`;
